@@ -9,6 +9,9 @@ version 0.40
 	* Set application title from the selected date and tab
 	* Show today's date in the appicon
 	* Use a human readable description for colors in defaults
+	* Show time in the appicon
+	* Add a new UI Preferences panel and use it for tooltips and 
+	  date and time in the appicon
 
 version 0.39 (2009/09/20)
 	* Code cleanups (as always)
